# scuttlebutt_new_tmp

./: Cargo.toml
src/: block512.rs  bloomfilter.rs  channel.rs  serialization.rs
src/field/: f128b.rs  f2.rs  f61p.rs  f64b.rs  fft.rs  small_binary_fields.rs
