[package]
name = "scuttlebutt"
version = "0.3.2"
authors = ["Alex J. Malozemoff <amaloz@galois.com>"]
license = "MIT"
readme = "README.md"
description = "A library of useful multi-party computation utilities"
keywords = ["cryptography", "MPC", "secure-computation"]
categories = ["cryptography"]
edition = "2018"
publish = false

[features]
ff = ["dep:ff", "dep:ff_codegen", "rand_chacha"]
nightly = ["curve25519-dalek/nightly", "curve25519-dalek/simd_backend"]
unstable = []
serde = []

[dependencies]
curve25519-dalek = { package = "curve25519-dalek-ng", version = "4.1.1" }
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
serde = "1.0.148"
sha2 = "0.10.6"
subtle = "2.4.1"
generic-array = "0.14.6"
smallvec = "1.10.0"
bytemuck = { version = "1.12.3", features = ["derive"] }
vectoreyes = { git = "https://github.com/FatemehJD/vectoreyes", branch = "main"}
ndarray = "0.15.6"
num-traits = "0.2.15"
# ff = { workspace = true, features = ["derive"], optional = true }

[build-dependencies]
ff_codegen = { workspace = true, optional = true }
tempfile = "3.3.0"
sha2 = "0.10.6"

[dev-dependencies]
criterion = "0.4.0"
hex = "0.4.3"
proptest = "1.0.0"
num-bigint = "0.4.3"
serde_json = "1.0.89"
bincode = "1.3.3"
serde = { version = "1.0.148", features = ["derive"] }

[[bench]]
name = "aes128"
harness = false

[[bench]]
name = "aes256"
harness = false

[[bench]]
name = "block"
harness = false

[[bench]]
name = "block512"
harness = false

[[bench]]
name = "commitment"
harness = false

[[bench]]
name = "hash_aes"
harness = false

[[bench]]
name = "rand_aes"
harness = false

[[bench]]
name = "finite_fields"
harness = false
